# clap-cargo-extra

./: .gitignore  Cargo.toml  README.md
examples/: clap-cargo.rs
src/: cargo_bin.rs  cargo_build.rs  cmd.rs  impls.rs  lib.rs
tests/fixtures/: Cargo.toml
tests/fixtures/double-dep/: Cargo.toml
tests/fixtures/single-dep/: Cargo.toml
tests/fixtures/triple-dep/: Cargo.toml
tests/fixtures/zero-dep/: Cargo.toml
tests/it/: args.rs  deps.rs  main.rs
