[package]
authors = ["Willem Wyndham <willem@ahalabs.dev>"]
description = "Tool to extend clap cargo adding some useful functions"
edition = "2021"
keywords = ["clap", "cargo", "cli"]
license = "MIT"
name = "clap-cargo-extra"
repository = "https://github.com/ahalabs/clap-cargo-extra"
version = "0.3.0"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
cargo_metadata = "0.17.0"
clap = { version = "4.3.19", default-features = false, features = ["std", "derive"] }
clap-cargo = {version = "0.11.0", features = ['cargo_metadata']}
heck = "0.4.0"


[features]
default = ["std"]
std = []
